--- a/diffstat/configure.in
+++ b/diffstat/configure.in
@@ -1,18 +1,20 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 1.22 2010/07/16 09:25:15 tom Exp $
-AC_PREREQ(2.13.20020210)
-AC_REVISION($Revision: 1.22 $)
+dnl $Id: configure.in,v 1.33 2019/11/29 01:32:17 tom Exp $
+dnl
+dnl Copyright 1994-2016,2019 Thomas E. Dickey
+dnl
+AC_PREREQ(2.52.20190901)
+AC_REVISION($Revision: 1.33 $)
 AC_INIT(diffstat.c)
 AC_CONFIG_HEADER(config.h:config_h.in)
 
-AC_PROG_CC
+AC_CANONICAL_HOST
+CF_PROG_CC
 AC_PROG_INSTALL
 CF_PROG_LINT
 CF_MAKE_TAGS
 
-CF_ANSI_CC_REQD
 CF_DISABLE_ECHO
-CF_PROG_EXT
 CF_WITH_INSTALL_PREFIX
 
 with_full_paths=no
@@ -36,19 +38,31 @@ malloc.h \
 search.h \
 string.h \
 )
-CF_GETOPT_HEADER
 
 AC_TYPE_SIZE_T
 
+CF_LOCALE
+
 AC_CHECK_FUNCS(\
 mkdtemp \
-popen \
+opendir \
+strdup \
 tsearch \
 )
 
+CF_FUNC_LSTAT
+CF_FUNC_GETOPT(getopt,\$(srcdir)/porting)
+CF_FUNC_POPEN(popen,\$(srcdir)/porting)
+CF_FUNC_MBSTOWCWIDTH
+
 CF_STDIO_UNLOCKED(getc_unlocked)
 
+AC_HAVE_HEADERS(ioctl.h sys/ioctl.h)
+CF_TERMIOS
+
+CF_WITH_MAN2HTML
 CF_DISABLE_LEAKS
 
 ###	output makefile and config.h
 AC_OUTPUT(makefile,,,cat)
+CF_MAKE_DOCS(diffstat,1)
