--- a/diffstat/makefile.in
+++ b/diffstat/makefile.in
@@ -1,4 +1,4 @@
-# $Id: makefile.in,v 1.29 2010/07/15 22:45:54 tom Exp $
+# $Id: makefile.in,v 1.35 2018/08/15 00:55:15 tom Exp $
 # Makefile-template for 'diffstat'
 
 THIS		= diffstat
@@ -12,6 +12,7 @@ DESTDIR		= @DESTDIR@
 prefix		= @prefix@
 exec_prefix	= @exec_prefix@
 
+datarootdir	= @datarootdir@
 bindir		= @bindir@
 mandir		= @mandir@
 
@@ -22,6 +23,7 @@ INSTALL_PROGRAM	= @INSTALL_PROGRAM@
 INSTALL_DATA	= @INSTALL_DATA@
 
 LINT		= @LINT@
+LINTOPTS	= @LINT_OPTS@
 CTAGS		= @CTAGS@
 ETAGS		= @ETAGS@
 
@@ -33,6 +35,8 @@ LDFLAGS		= @LDFLAGS@
 
 o		= .@OBJEXT@
 x		= @EXEEXT@
+
+EXTRA_OBJS	= @EXTRA_OBJS@
 
 BINDIR		= $(DESTDIR)$(bindir)
 MANDIR		= $(DESTDIR)$(mandir)
@@ -71,30 +75,30 @@ DISTFILES =	configure config.guess config.sub $(SRC)
 
 all :	$(PROG)
 
-$(PROG) : diffstat$o
-	@ECHO_LD@$(LINK) $(LDFLAGS) -o $@ diffstat$o $(LIBS)
+$(PROG) : diffstat$o $(EXTRA_OBJS)
+	@ECHO_LD@$(LINK) $(LDFLAGS) -o $@ diffstat$o $(EXTRA_OBJS) $(LIBS)
 
 install : all installdirs
 	$(INSTALL_PROGRAM) $(PROG) $(BINDIR)/$(PROG)
 	$(INSTALL_DATA) $(srcdir)/$(THIS).1 $(man1dir)/$(THIS).$(manext)
 
 installdirs :
-	mkdir -p $(BINDIR) $(libdir) $(man1dir)
+	mkdir -p $(BINDIR) $(man1dir)
 
 uninstall :
 	rm -f $(BINDIR)/$(PROG) $(man1dir)/$(THIS).$(manext)
 
-mostlyclean :
+mostlyclean ::
 	rm -f *.o core *~ *.out *.err *.BAK *.atac
 
-clean : mostlyclean
+clean :: mostlyclean
 	rm -f $(PROG)
 
-distclean : clean
-	rm -f makefile config.log config.cache config.status config.h
+distclean :: clean
+	rm -f makefile config.log config.cache config.status config.h man2html.tmp
 	rm -f tags TAGS # don't remove configure!
 
-realclean : distclean
+realclean :: distclean
 
 check :	$(PROG)
 	$(SHELL) -c 'PATH=`pwd`:$${PATH}; export PATH; \
@@ -142,3 +146,6 @@ dist:	makefile $(DISTFILES)
 $(THIS).o :	config.h
 
 $(SRC) :
+
+getopt.o : $(srcdir)/porting/getopt.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $(srcdir)/porting/getopt.c
