--- a/diffstat/package/debian/control
+++ b/diffstat/package/debian/control
@@ -1,7 +1,7 @@
 Source: diffstat
 Maintainer: Thomas E. Dickey <dickey@invisible-island.net>
 Section: devel
-Priority: extra
+Priority: optional
 Standards-Version: 3.8.4
 Build-Depends: debhelper (>= 5)
 Homepage: http://invisible-island.net/diffstat/
@@ -9,7 +9,7 @@ Homepage: http://invisible-island.net/diffstat/
 Package: diffstat
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: generate C function prototypes and convert function definitions
- Diffstat is is useful for reviewing large, complex patch files.  It reads from
+Description: produces graph of changes introduced by a diff between files.
+ Diffstat is useful for reviewing large, complex patch files.  It reads from
  one or more input files which contain output from diff, producing a histogram
  of the total lines changed for each file referenced.
